--- a/front/package.json
+++ b/front/package.json
@@ -40,6 +40,12 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "@tiptap/extension-bullet-list": "^2.26.1",
+    "@tiptap/extension-character-count": "^2.26.1",
+    "@tiptap/extension-list-item": "^2.26.1",
+    "@tiptap/extension-text-align": "^2.26.1",
+    "@tiptap/react": "^2.26.1",
+    "@tiptap/starter-kit": "^2.26.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
